--- a/train/pretrain/train_args/train_config.json
+++ b/train/pretrain/train_args/train_config.json
@@ -1,12 +1,12 @@
 {
-    "model_name_or_path": "/lite-ai/mistral-1.1B",
+    "model_name_or_path": "/ggj/github/New/HARE/LiteAI/HARE",
     "deepspeed": "./train_args/ds_config.json",
     "data_config": "./train_args/data_info.ini",
-    "data_path": "./data",
+    "data_path": "/ggj/github/New/HARE/test",
     "train_file": "",
     "per_device_eval_batch_size": 64,
     "gradient_clipping": 1.0,
-    "num_grad_accum_steps": 64,
+    "num_grad_accum_steps": 8,
     "seed": 666,
     "use_cache": false,
     "cache_path": "",
@@ -19,8 +19,8 @@
     "saving_steps": 1000,
     "output_dir": "/home/mutil/train_model",
     "offload": false,
-    "resume": false,
-    "resume_model_path": "/home/mutil/train_model",
+    "resume": true,
+    "resume_model_path": "/home/mutil/train_model/checkpoint-100",
     "eval_step": 200,
     "do_eval": false,
     "version": 1,
