--- a/train/pretrain/train_args/train_config.json
+++ b/train/pretrain/train_args/train_config.json
@@ -1,8 +1,8 @@
 {
-    "model_name_or_path": "/ggj/github/New/HARE/LiteAI/HARE",
+    "model_name_or_path": "/HARE/LiteAI/HARE",
     "deepspeed": "./train_args/ds_config.json",
     "data_config": "./train_args/data_info.ini",
-    "data_path": "/ggj/github/New/HARE/test",
+    "data_path": "/HARE/test",
     "train_file": "",
     "per_device_eval_batch_size": 64,
     "gradient_clipping": 1.0,
